[package]
authors = ["Tim-Philipp Müller <tim@centricular.com>"]
edition = "2021"
license = "MPL-2.0"
name = "aes67-relay-chunker"
version = "0.1.0"
[dependencies]
anyhow = "1.0"
atomic_refcell = "0.1.8"
base64 = "*"
clap = "3.1.0"
crczoo = "0.1.1"
md5 = "0.7.0"
once_cell = "1.9.0"
url = "2.2.2"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gst]
features = ["v1_20"]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
package = "gstreamer"

[dependencies.gst-app]
features = ["v1_20"]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
package = "gstreamer-app"

[dependencies.gst-audio]
features = ["v1_20"]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
package = "gstreamer-audio"

[dependencies.gst-base]
features = ["v1_20"]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
package = "gstreamer-base"

[dependencies.gst-net]
features = ["v1_20"]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
package = "gstreamer-net"

[dependencies.gst-rtp]
features = ["v1_20"]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
package = "gstreamer-rtp"

[dependencies.gst-rtsp-server]
features = ["v1_20"]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
package = "gstreamer-rtsp-server"
