[package]
authors = ["Tim-Philipp Müller <tim@centricular.com>"]
edition = "2021"
license = "MPL-2.0"
name = "aes67-relay-chunker"
version = "0.1.1"
[dependencies]
anyhow = "1.0"
atomic_refcell = "0.1.8"
base64 = "*"
clap = "4"
crczoo = "0.1.1"
md5 = "0.7.0"
once_cell = "1.9.0"
url = "2.2.2"
bitstream-io = "2"

[dependencies.glib]
version = "0.20"

[dependencies.gst]
features = ["v1_24"]
package = "gstreamer"
version = "0.23"

[dependencies.gst-app]
features = ["v1_24"]
package = "gstreamer-app"
version = "0.23"

[dependencies.gst-audio]
features = ["v1_24"]
package = "gstreamer-audio"
version = "0.23"

[dependencies.gst-base]
features = ["v1_24"]
package = "gstreamer-base"
version = "0.23"

[dependencies.gst-net]
features = ["v1_24"]
package = "gstreamer-net"
version = "0.23"

[dependencies.gst-rtp]
features = ["v1_24"]
package = "gstreamer-rtp"
version = "0.23"

[dependencies.gst-rtsp-server]
features = ["v1_24"]
package = "gstreamer-rtsp-server"
version = "0.23"
